# clothing-store

./: Makefile  docker-compose.yml  init.sql
services/backend/: .env.sample  Dockerfile  pyproject.toml
services/backend/commands/: run_fastapi_dev.sh
services/backend/migrations/: cli.py
services/backend/migrations/scripts/: migrate.py  rollback.py
services/backend/migrations/versions/down/: 001_add_product_slug.sql  002_create_accounts_tables .sql
services/backend/migrations/versions/up/: 001_add_product_slug.sql  002_create_accounts_tables .sql
services/backend/src/: app.py  main.py
services/backend/src/apps/accounts/: controllers.py  dependencies.py  routes.py
services/backend/src/apps/catalog/: controllers.py  dependencies.py  factories.py  routes.py
services/backend/src/db/: connection.py  dao.py  dependencies.py  interfaces.py  query_builder.py  session.py  transaction_context.py
services/backend/src/etl/: extract_transform.py  load_to_db.py  seed.py
services/backend/src/etl/commands/: sync_products.py
services/backend/src/etl/models/: dto.py
services/backend/src/etl/sync/: exceptions.py  (+4 more)
services/backend/src/notifications/: dependencies.py  factories.py
services/backend/src/oauth/: dependencies.py  dto.py  exceptions.py  factories.py  interfaces.py
services/backend/src/search/: autocomplete.py  dependencies.py  exceptions.py  interfaces.py
services/backend/src/security/: __init__.py  dependencies.py  exceptions.py  http.py  interfaces.py  jwt_token.py  passwords.py
services/backend/src/settings/: config.py  logging_config.py
(+153 files in other folders)
