[project]
name = "front-back-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Yurii Okal",email = "wspjoy2011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "numpy (==1.26.4)",
    "psycopg[binary] (>=3.1.9)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "elasticsearch[async] (>=9.0.1,<10.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "validators (>=0.35.0,<0.36.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
mlxtend = "^0.23.4"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
